--- a/backgammon-master/View/QAView.fxml
+++ b/backgammon-master/View/QAView.fxml
@@ -26,6 +26,7 @@
   
 <Button fx:id="addButton" layoutX="126.0" layoutY="440.0" prefHeight="43.0" prefWidth="120.0" text="Add Question" />
 <Button fx:id="backButton" layoutX="371.0" layoutY="440.0" prefHeight="43.0" prefWidth="100.0" text="Back to Menu" />
+<Button fx:id="reloadButton" layoutX="517.0" layoutY="449.0" mnemonicParsing="false" text="reload" />
 
    </children>
 </AnchorPane>
